# provis

./: .gitignore  Cargo.toml  PACKAGING.md  README.md  build.rs  snapcraft.yaml
cli/: Cargo.toml
cli/src/: args.rs  commands.rs  lib.rs  table.rs
cli/src/directory/: display.rs  mod.rs  scanner.rs
cli/src/process/: display.rs  graph.rs  mod.rs  stats.rs
src/: main.rs
