[package]
name = "provis"
version = "3.6.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2018"
keywords = ["linux", "mac", "filesystem", "disk", "process", "monitoring"]
license = "MIT"
categories = ["filesystem", "command-line-utilities"]
description = "System monitoring and disk analysis tool - filesystem, process, and directory views"
repository = "https://github.com/YOUR_USERNAME/provis"
homepage = "https://github.com/YOUR_USERNAME/provis"
documentation = "https://github.com/YOUR_USERNAME/provis"
readme = "README.md"
rust-version = "1.75"
exclude = ["website", "provis*.zip", "screenshots"]
build = "build.rs"
resolver = "2"

[dependencies]
provis-cli = { version = "3.6.0", path = "cli" }

[build-dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
clap_complete = "4.4"
clap_mangen = "0.2.12"
provis-cli = { version = "3.6.0", path = "cli" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[profile.release]
strip = true

# Debian packaging configuration
[package.metadata.deb]
maintainer = "Your Name <your.email@example.com>"
copyright = "2024, Your Name <your.email@example.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
Provis is a comprehensive system monitoring tool that provides three views:
- Filesystem monitoring with disk usage visualization
- Process monitoring with CPU and memory tracking
- Directory size analysis with smart filtering

Features include real-time monitoring, customizable columns, filtering,
and multiple output formats (JSON, CSV)."""
depends = "$auto"
section = "admin"
priority = "optional"
assets = [
    ["target/release/provis", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/provis/", "644"],
    ["LICENSE", "usr/share/doc/provis/", "644"],
]

[package.metadata.deb.systemd-units]
